<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".OnBoarding.PhoneVerification">

    <ImageView
        android:id="@+id/phoneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/phoneveri" />

    <TextView
        android:id="@+id/otpVerificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/otpVerification"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/otpVerificationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/otpVerificationMessage"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/enterMobileNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/enterMobileNumber"
        android:textColor="@color/lightGreyForText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/phonenumber_border"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@android:color/tab_indicator_text"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary" />

    <Button
        android:id="@+id/sendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"

        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:text="@string/getOTP"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>