<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding.OtpConfirmation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/phoneveri" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/otpVerification"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mobileNumberOTPConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/enterTheOTPSentTo"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/otpDigit1"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:layout_marginLeft="8dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:background="@drawable/otp_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/otpDigit2"
                    android:layout_weight="1"
                    android:background="@drawable/otp_border"
                    android:padding="12dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/otpDigit3"
                    android:layout_weight="1"
                    android:background="@drawable/otp_border"
                    android:padding="12dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/otpDigit4"
                    android:layout_weight="1"
                    android:background="@drawable/otp_border"
                    android:padding="12dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/otpDigit5"
                    android:layout_weight="1"
                    android:background="@drawable/otp_border"
                    android:padding="12dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/otpDigit6"
                    android:layout_weight="1"
                    android:background="@drawable/otp_border"
                    android:padding="12dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">

                <Button
                    android:id="@+id/verifyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="sans-serif"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>